--- a/MyShop.cbp
+++ b/MyShop.cbp
@@ -31,7 +31,7 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Wall" />
+			<Add option="-Wall -std=c++11" />
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="include/Brand.h" />
